--- a/styles.css
+++ b/styles.css
@@ -3,16 +3,41 @@ header {
   margin: none;
   padding: 50px;
   border: none;
+  font-size: 80px;
+}
+
+h1{
+  margin:auto;
+}
+
+form{
+  margin: 20px;
+}
+
+/* TABLE */
+table {
+  width: 100%;
+  text-align: left;
 }
 table, th, td {
   border: 1px solid black;
   border-collapse: collapse;
-  margin: 50px;
+  height: 2.15em;
 }
-
 th, td {
-  padding-top: 10px;
-  padding-bottom: 13px;
-  padding-left: 30px;
-  padding-right: 40px;
+  padding: .5em;
+  min-width: 3.5em;
+}
+thead {
+  background: #7a7a7a;
+  color: #fcfcfc;
+}
+tbody tr:nth-child(odd){ 
+  background: #fcfcfc;
+}
+tbody tr:nth-child(even){
+  background: #dcdcdc;
+}
+input{
+  border-radius: 5px;
 }
