--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,12 @@
 header {
   background-color: grey;
   margin: auto;
-  padding: 50px;
+  padding-top: 50px;
+  padding-bottom: 20px;
   font-size: 80px;
   height: 100%;
   width: 100%;
+  color: white;
 }
 
 *{
@@ -48,5 +50,9 @@ input{
 }
 h2{
   font-size: 40px;
-  justify-content: flex-end;
+  text-align: right;
+}
+tfoot{
+  background: #7a7a7a;
+  color: #fcfcfc;
 }
